QMimeDatabase: follow symlinks when checking for FIFO etc.

This was documented, but not what the code did.

Task-number: QTBUG-48529
Change-Id: I4849778c61dcae13be27c62b24717693c0c07d78
Reviewed-by: Edward Welbourne <edward.welbourne@theqtcompany.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: 72b4f0d4743826ee14ec06bf0ada26418f4a69be https://github.com/qt/qtbase/commit/72b4f0d4743826ee14ec06bf0ada26418f4a69be