src/corelib/mimetypes/qmimedatabase.cpp
@@ -1026,6 +1026,7 @@ ifdef|#
 directive|ifdef
 name|Q_OS_UNIX
 comment|// Cannot access statBuf.st_mode from the filesystem engine, so we have to stat again.
+comment|// In addition we want to follow symlinks.
 specifier|const
 name|QByteArray
 name|nativeFilePath
@@ -1045,7 +1046,7 @@ name|statBuffer
 decl_stmt|;
 if|if
 condition|(
-name|QT_LSTAT
+name|QT_STAT
 argument_list|(
 name|nativeFilePath
 operator|.
